--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "moduleNameMapper": {
       "^#spruce/(.*)$": "<rootDir>/build/.spruce/$1"
     }
+  },
+  "dependencies": {
+    "@neurodevs/node-file-loader": "^0.2.0"
   }
 }
